--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,8 @@
     <name>Timoka</name>
     <properties>
             <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <spring.version>4.2.2.RELEASE</spring.version>
+        <hibernate.version>5.0.3.Final</hibernate.version>
     </properties>
 
     <dependencies>
@@ -24,18 +26,45 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-core</artifactId>
-            <version>4.2.2.RELEASE</version>
+            <version>${spring.version}</version>
         </dependency>
         <dependency>
         	<groupId>org.springframework</groupId>
         	<artifactId>spring-web</artifactId>
-        	<version>4.2.2.RELEASE</version>
+        	<version>${spring.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-webmvc</artifactId>
-            <version>4.2.2.RELEASE</version>
+            <version>${spring.version}</version>
         </dependency>
+        <dependency>
+        	<groupId>org.hibernate</groupId>
+        	<artifactId>hibernate-core</artifactId>
+        	<version>${hibernate.version}</version>
+        </dependency>
+        <dependency>
+        	<groupId>org.hibernate</groupId>
+        	<artifactId>hibernate-entitymanager</artifactId>
+        	<version>${hibernate.version}</version>
+        </dependency>
+        <dependency>
+        	<groupId>mysql</groupId>
+        	<artifactId>mysql-connector-java</artifactId>
+        	<version>5.1.33</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+        	<groupId>org.springframework</groupId>
+        	<artifactId>spring-orm</artifactId>
+        	<version>${spring.version}</version>
+        </dependency>
+        <dependency>
+        	<groupId>org.springframework</groupId>
+        	<artifactId>spring-jdbc</artifactId>
+        	<version>2.0.6</version>
+        </dependency>
+
     </dependencies>
 
     <build>
@@ -47,6 +76,10 @@
                 <groupId>org.apache.tomcat.maven</groupId>
                 <artifactId>tomcat7-maven-plugin</artifactId>
                 <version>2.2</version>
+                <configuration>
+                    <server>tomcat-development-server</server>
+                    <port>8090</port>
+                </configuration>
             </plugin>
         </plugins>
     </build>
